--- a/languages/mop-acf-authors-he_IL.po
+++ b/languages/mop-acf-authors-he_IL.po
@@ -1,18 +1,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2015-11-12 13:54+0200\n"
-"PO-Revision-Date: 2015-11-17 16:13+0200\n"
+"POT-Creation-Date: 2015-11-24 11:25+0200\n"
+"PO-Revision-Date: 2015-11-24 11:25+0200\n"
 "Last-Translator: Lea - Ort Israel <leac@mapa.ort.org.il>\n"
 "Language-Team: \n"
 "Language: he_IL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 1.8.5\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-KeywordsList: __\n"
+"X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: public\n"
 
@@ -20,6 +20,6 @@ msgstr ""
 msgid "Articles by"
 msgstr "מאמרים מאת"
 
-#: public/class-mop-acf-authors-public.php:315
+#: public/class-mop-acf-authors-public.php:357
 msgid "default featured image"
-msgstr ""
+msgstr "תמונת ברירת מחדל"
